<resources>
    <string name="app_name">AndroidFirebaseLogin</string>
    <string name="signIn_emailHint">Email</string>
    <string name="signIn_emailHelper">Digite o seu Email</string>
    <string name="signIn_passwordHint">Senha</string>
    <string name="signIn_passwordHelper">Digite a sua senha</string>
    <string name="signIn_button">ENTRAR</string>
    <string name="signIn_registerDesc">AINDA NÃO POSSUI UMA CONTA?</string>
    <string name="signUp_button">CRIAR CONTA</string>
    <string name="signUp_title">Crie sua conta</string>
    <string name="signUp_nameHint">Nome</string>
    <string name="signUp_nameHelper">Digite seu nome completo</string>
    <string name="signUp_emailHint">Email</string>
    <string name="signUp_emailHelper">Digite um email valido</string>
    <string name="signUp_passwordHint">Senha</string>
    <string name="signUp_passwordHelper">Digite uma senha com no minimo 8 caracteres</string>
    <string name="signUp_confirmPasswordHint">Senha</string>
    <string name="signUp_confirmPasswordHelper">Digite a mesma senha</string>
    <string name="signUp_registerDesc">Já possui conta?</string>
    <string name="home_title">O que traz você</string>
    <string name="forgotPasswordButton">ESQUECI A SENHA!</string>
    <string name="signIn_title">Bem-Vindo de Volta!</string>
    <string name="signUp_accountType">Tipo de Conta</string>
    <string name="signUp_accountTypeClient">Cliente</string>
    <string name="signUp_accountTypeEmployee">Funcionario</string>
    <string name="home_subTitle">para o CarWorkShop?</string>
    <string name="home_desc">qual problema você ira resolver:</string>
    <string name="carMaintenance">Carro em manutenção</string>
    <string name="home_carTires">Freios e Cambagem</string>
    <string name="home_carSuspension">Eixo e Suspensão</string>
    <string name="home_carAlign">Alinhamento</string>
    <string name="home_carEngine">Motor e Eletrica</string>
    <string name="services_title">O que trouxe você</string>
    <string name="services_subTitle">para o CarWorkShop</string>
    <string name="service_desc">lista de problemas sendo resolvidos:</string>
    <string name="home_carTiresDesc">Descrição do problema cadastrados pelo funcionario, mas sem passar de 3 linhas...</string>
    <string name="home_carTiresStatus">Em andamento: previsão 23/06/2021</string>
    <string name="createService_title">Cadastrar Serviço</string>
    <string name="createService_descHint">Detalhar problema</string>
    <string name="createService_serviceHint">Eixo e Suspensão</string>
    <string name="createService_datePicker">Selecione a Data</string>
    <string name="createService_client">Selecione o Cliente</string>
    <string name="createService_button">SALVAR</string>
    <string name="createService_cancelButton">CANCELAR</string>
    <string name="editService_title">Editar Serviço</string>
    <string name="editService_serviceHint">Eixo e Suspensão</string>
    <string name="editService_descHint">Dethales do serviço</string>
    <string name="editService_datePicker">Data</string>
    <string name="editService_client">Cliente</string>
    <string name="editService_button">SALVAR</string>
    <string name="editService_cancelButton">CANCELAR</string>
    <string name="home_logoutButton">SAIR</string>
    <string name="signUp_backButton">Voltar</string>

</resources>