<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/signIn_title"
        android:textAlignment="center"
        android:textColor="@color/black_800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedRoundedBox"
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="180dp"
        android:hint="@string/signIn_emailHint"
        android:textColorHint="@color/grey_500"
        app:boxBackgroundColor="@color/inputBackground"
        app:startIconTint="@color/grey_500"
        app:startIconDrawable="@drawable/ic_outline_email_24"
        app:helperText="@string/signIn_emailHelper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedRoundedBox"
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/signIn_passwordHint"
        android:textColorHint="@color/grey_500"
        app:boxBackgroundColor="@color/inputBackground"
        app:startIconTint="@color/grey_500"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:helperText="@string/signIn_passwordHelper"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:layout_constraintLeft_toLeftOf="@+id/emailInputLayout"
        app:layout_constraintRight_toRightOf="@+id/emailInputLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        style="@style/OutlinedRoundedBox"
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/signIn_button"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/passwordInputLayout"
        app:layout_constraintRight_toRightOf="@id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        />
    <Button
        android:id="@+id/forgotButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordButton"
        android:layout_marginTop="24dp"
        android:textColor="@color/black_800"
        app:layout_constraintLeft_toLeftOf="@id/signInButton"
        app:layout_constraintRight_toRightOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/forgotButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/signIn_registerDesc"
            android:textColor="@color/grey_500" />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_button"
            android:textColor="#8E97FD"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>