<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/robot_slab_bold"
        android:text="@string/services_title"
        android:textAlignment="center"
        android:textColor="@color/black_800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/homeSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robot_slab_light"
        android:text="@string/services_subTitle"
        android:textAlignment="center"
        android:textColor="@color/black_800"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/homeTitle"
        app:layout_constraintTop_toBottomOf="@id/homeTitle" />

    <TextView
        android:id="@+id/homeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/robot_slab_light"
        android:text="@string/service_desc"
        android:textAlignment="center"
        android:textColor="@color/grey_500"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/homeSubTitle"
        app:layout_constraintTop_toBottomOf="@id/homeSubTitle" />
    <LinearLayout
        android:id="@+id/carServiceLineOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="@id/homeDesc"
        app:layout_constraintTop_toBottomOf="@id/homeDesc">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCarTires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/red_400"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="196dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-22dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginBottom="-12dp"
                    android:layout_marginEnd="-16dp"
                    android:adjustViewBounds="true"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/carMaintenance"
                    android:cropToPadding="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_car_tires_red" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_carTires"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/robot_slab_bold"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_carTiresDesc"
                        android:textColor="@color/black_800"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/robot_slab_bold"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_carTiresStatus"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/robot_slab_bold"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>