<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.SignInActivity"
    tools:ignore="AutoFill, LabelFor"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/createService_title"
        android:textAlignment="center"
        android:textColor="@color/black_800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedRoundedBox.ExposedDropdownMenu"
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="136dp"
        android:hint="@string/createService_serviceHint"
        android:textColorHint="@color/grey_500"
        app:boxBackgroundColor="@color/inputBackground"
        app:endIconTint="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedRoundedBox"
        android:id="@+id/descInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/createService_descHint"
        android:textColorHint="@color/grey_500"
        app:boxBackgroundColor="@color/inputBackground"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
        app:layout_constraintLeft_toLeftOf="@+id/nameInputLayout"
        app:layout_constraintRight_toRightOf="@+id/nameInputLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descInputEditText"
            android:lines="3"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedRoundedBox"
        android:id="@+id/datePickerInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/createService_datePicker"
        android:textColorHint="@color/grey_500"
        app:boxBackgroundColor="@color/inputBackground"
        app:endIconTint="@color/grey_500"
        app:endIconDrawable="@drawable/ic_outline_calendar_today_24"
        app:endIconMode="custom"
        app:layout_constraintTop_toBottomOf="@+id/descInputLayout"
        app:layout_constraintLeft_toLeftOf="@+id/descInputLayout"
        app:layout_constraintRight_toRightOf="@+id/descInputLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePickerInputEditText"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedRoundedBox.ExposedDropdownMenu"
        android:id="@+id/clientInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/createService_client"
        android:textColorHint="@color/grey_500"
        app:boxBackgroundColor="@color/inputBackground"
        app:endIconTint="@color/grey_500"
        app:endIconDrawable="@drawable/ic_outline_person_search_24"
        app:layout_constraintTop_toBottomOf="@+id/datePickerInputLayout"
        app:layout_constraintLeft_toLeftOf="@+id/datePickerInputLayout"
        app:layout_constraintRight_toRightOf="@+id/datePickerInputLayout"
        >
        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        style="@style/OutlinedRoundedBox"
        android:id="@+id/createServiceButton"
        android:layout_width="186dp"
        android:layout_height="56dp"
        android:text="@string/createService_button"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/clientInputLayout"
        app:layout_constraintRight_toRightOf="@id/clientInputLayout"
        app:layout_constraintTop_toBottomOf="@id/clientInputLayout"
        />
    <Button
        android:id="@+id/forgotButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createService_cancelButton"
        android:layout_marginTop="8dp"
        android:textColor="@color/black_800"
        app:layout_constraintLeft_toLeftOf="@id/createServiceButton"
        app:layout_constraintRight_toRightOf="@id/createServiceButton"
        app:layout_constraintTop_toBottomOf="@id/createServiceButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>