<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_title"
        android:fontFamily="@font/robot_slab_bold"
        android:textAlignment="center"
        android:textColor="@color/black_800"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/homeSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_subTitle"
        android:fontFamily="@font/robot_slab_light"
        android:textAlignment="center"
        android:textColor="@color/black_800"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/homeTitle"
        app:layout_constraintTop_toBottomOf="@id/homeTitle" />
    <TextView
        android:id="@+id/homeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_desc"
        android:fontFamily="@font/robot_slab_light"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/grey_500"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/homeSubTitle"
        app:layout_constraintTop_toBottomOf="@id/homeSubTitle" />
    <LinearLayout
        android:id="@+id/carServiceLineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/homeDesc"
        app:layout_constraintTop_toBottomOf="@id/homeDesc">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCarTires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/red_400"
            >
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="168dp"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-12dp"
                    android:layout_marginTop="-16dp"
                    android:layout_marginStart="-4dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_car_tires_red"
                    android:contentDescription="@string/carMaintenance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_carTires"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/robot_slab_bold"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCarSuspension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:cardBackgroundColor="@color/green_400"
            >
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="168dp"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-12dp"
                    android:layout_marginTop="-16dp"
                    android:layout_marginStart="-4dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_car_suspension_green"
                    android:contentDescription="@string/carMaintenance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_carSuspension"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/robot_slab_bold"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/carServiceLineOne"
        app:layout_constraintTop_toBottomOf="@id/carServiceLineOne">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCarEngine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            >
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="168dp"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-12dp"
                    android:layout_marginTop="-16dp"
                    android:layout_marginStart="-4dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_car_engine_blue"
                    android:contentDescription="@string/carMaintenance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_carEngine"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/robot_slab_bold"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardCarAlign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:cardBackgroundColor="@color/yellow_400"
            >
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="168dp"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-12dp"
                    android:layout_marginTop="-16dp"
                    android:layout_marginStart="-4dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/ic_car_brakes_yellow"
                    android:contentDescription="@string/carMaintenance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_carAlign"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/robot_slab_bold"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>